src/index.css
@import "tailwindcss";

html,
body {
    overflow-x: hidden;
    max-width: 100%;
    position: relative;
}

@layer components {

    /* Main Container */
    .main-container {
        @apply max-w-7xl mx-auto px-4 sm:px-6 lg:px-12;
    }

    .section-main {
        @apply pt-10 md:pt-16 lg:pt-20 xl:pt-24
    }

    .section-header {
        @apply flex flex-col items-center text-center max-w-3xl mx-auto;
    }

    .section-title {
        @apply text-3xl md:text-4xl font-semibold text-gray-900 leading-tight;
    }

    .section-desc {
        @apply text-gray-500 text-sm md:text-base leading-relaxed max-w-2xl;
    }
}

